# vibe-test

./: .env.sample  .gitignore  CLAUDE.md  README.md  docker-compose.yml  my-requirement.md  nginx.conf  test.tcx
.my-docs/: my-requirement.md  requirement.md
.my-docs/planning/: 00-overview.md  01-auth.md  02-dashboard.md  03-activities.md  04-activity-detail.md  05-races.md  06-race-detail.md
.my-docs/requirement/: requirement.md
.my-docs/sessions/: 2026-02-07-1000.md  2026-02-07-1730.md  2026-02-08-1416.md  2026-03-01-1930-mysql-porting.md  2026-03-15-2230-plan-session-fix.md  2026-03-15-2315-google-sso-skill.md  2026-03-16-0700-tz-fix-docs-sync.md  2026-03-16-0720-test-prompt-fix.md
backend/: Dockerfile  ai_analysis.py  auth.py  database.py  email_service.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  tcx_parser.py
backend/backend/: requirements.txt
backend/routers/: activities.py  dashboard.py  races.py  users.py
backend/tests/: conftest.py  test_auth.py  test_email_service.py  test_tcx_parser.py
backend/tests/fixtures/: sample_data.py  sample_tcx.py
backend/tests/routers/: test_activities.py  test_dashboard.py  test_plans.py  test_races.py  test_users.py
backend/tests/services/: test_llm_graph.py  test_llm_models.py  test_llm_plan_graph.py  test_llm_prompts.py
frontend/: .dockerignore  Dockerfile  SKtelecom_Pxy.crt  index.html  package-lock.json  package.json
frontend-ts/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend-ts/app/: layout.tsx
test-data/: February_Morning_Run.tcx
(+53 files in other folders)
